revert(client): ensure donate button is always visible (#66754)

--- a/client/src/components/Header/components/universal-nav.css
+++ b/client/src/components/Header/components/universal-nav.css
@@ -84,9 +84,8 @@
 
 /**
  * Site header language list
- * Using ~ so it still works if more items are added between the button and list.
  */
-.lang-button-nav[aria-expanded='true'] ~ .nav-list {
+.lang-button-nav[aria-expanded='true'] + .nav-list {
   -ms-overflow-style: none;
   display: block;
   max-height: calc(100vh - var(--header-height));
@@ -95,7 +94,7 @@
   top: calc(var(--header-height));
 }
 
-.lang-button-nav[aria-expanded='true'] ~ .nav-list::-webkit-scrollbar {
+.lang-button-nav[aria-expanded='true'] + .nav-list::-webkit-scrollbar {
   display: none;
 }
 
@@ -259,33 +258,6 @@ li > button.nav-link-signout:not([aria-disabled='true']):is(:hover, :focus) {
   border: 1px solid var(--gray-00);
 }
 
-.nav-donate-btn .menu-btn-icon {
-  display: inline-flex;
-  align-items: center;
-}
-
-.nav-donate-btn .menu-btn-text {
-  display: none;
-}
-
-@media (min-width: 601px) {
-  .nav-donate-btn .menu-btn-icon {
-    display: none;
-  }
-  .nav-donate-btn .menu-btn-text {
-    display: inline-block;
-  }
-}
-
-.nav-donate-btn .fa-heart {
-  color: #ff5e5e;
-  transition: transform 0.2s ease;
-}
-
-.nav-donate-btn:hover .fa-heart {
-  transform: scale(1.2);
-}
-
 /**
  * User thumbnail
  */
@@ -395,7 +367,7 @@ li > button.nav-link-signout:not([aria-disabled='true']):is(:hover, :focus) {
    menu is collapsed. */
 .universal-nav-right
   #toggle-button-nav[aria-expanded='false']
-  ~ .fcc_searchBar {
+  + .fcc_searchBar {
   display: none;
 }
 
@@ -403,7 +375,7 @@ li > button.nav-link-signout:not([aria-disabled='true']):is(:hover, :focus) {
     menu is collapsed. */
 .universal-nav-right
   #toggle-button-nav[aria-expanded='false']
-  ~ .fcc_searchBar
+  + .fcc_searchBar
   .ais-Hits {
   display: none;
 }
@@ -451,17 +423,12 @@ li > button.nav-link-signout:not([aria-disabled='true']):is(:hover, :focus) {
 
 /**
  * Handle submenu containers collapsed and expanded states
- 
- * We use ~ because the Donate button is now between the toggle button 
- * and the menu/search elements, so they are no longer right next to each other.
  */
-#universal-nav button[aria-expanded='false'] ~ .nav-list,
-#universal-nav button[aria-expanded='false'] ~ .fcc_searchBar {
+#universal-nav button[aria-expanded='false'] + div {
   display: none;
 }
 
-#universal-nav button[aria-expanded='true'] ~ .nav-list,
-#universal-nav button[aria-expanded='true'] ~ .fcc_searchBar {
+#universal-nav button[aria-expanded='true'] + div {
   display: block;
 }
 
